18_reverse_str/grade.txt
Grading at Sun May 31 06:05:56 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:6:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(str = NULL)
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
